--- a/wanted-poster/css/style.css
+++ b/wanted-poster/css/style.css
@@ -73,6 +73,7 @@ h2 {
     color:darkred;
     text-shadow:.09375rem .09375rem .09375rem #000;
     font-family:'Alfa Slab One', Garamond, serif;
+    font-weight: normal;
     text-align:center;
 }
 
@@ -81,18 +82,23 @@ h3 {
     font-size:2rem;
     margin: 0;
     letter-spacing: .5rem;
-    color:darkred;
-    text-shadow:.09375rem .09375rem .09375rem #000;
+    padding-bottom: 1.125rem;
+    color:black;
     font-family:'Alfa Slab One', Garamond, serif;
+    font-weight: normal;
     text-align:center;
 }
 
 h4 {
     text-transform: uppercase;
     font-size:1.5rem;
-    margin: 0;
+    margin-top:0.25rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    margin-bottom: 0.5rem;
     letter-spacing: .25rem;
-    color:darkred;
+    color:#FFF;
+    background-color: #333;
     text-shadow:.09375rem .09375rem .09375rem #000;
     font-family:'Alfa Slab One', Garamond, serif;
     text-align:center;
