--- a/wanted-poster/css/style.css
+++ b/wanted-poster/css/style.css
@@ -130,12 +130,20 @@ section {
 p {
     text-transform: uppercase;
     font-size:6rem;
-    margin: 0;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 0rem;
+    padding-bottom: 0rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
     letter-spacing: .5rem;
     color:darkred;
     text-shadow:.09375rem .09375rem .09375rem #000;
     font-family:'Alfa Slab One', Garamond, serif;
-    text-align:center;
+    width: 90%;
+    text-align:left;
 }
 
 
