--- a/wanted-poster/css/style.css
+++ b/wanted-poster/css/style.css
@@ -77,6 +77,7 @@ h2 {
     text-align:center;
 }
 
+
 h3 {
     text-transform: uppercase;
     font-size:2rem;
@@ -102,6 +103,14 @@ h4 {
     text-shadow:.09375rem .09375rem .09375rem #000;
     font-family:'Alfa Slab One', Garamond, serif;
     text-align:center;
+}
+
+h4 > span {
+  padding-top: 0;
+  padding-bottom: 0;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  
 }
 
 h5 {
