--- a/wanted-poster/css/style.css
+++ b/wanted-poster/css/style.css
@@ -137,8 +137,7 @@ section {
 }
 
 p {
-    text-transform: uppercase;
-    font-size:6rem;
+    font-size:4rem;
     margin-top: 1rem;
     margin-bottom: 1rem;
     margin-left: auto;
@@ -148,8 +147,7 @@ p {
     padding-left: 1rem;
     padding-right: 1rem;
     letter-spacing: .5rem;
-    color:darkred;
-    text-shadow:.09375rem .09375rem .09375rem #000;
+    color:black;
     font-family:'Alfa Slab One', Garamond, serif;
     width: 90%;
     text-align:left;
