--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -1,8 +1,8 @@
 /* TO GET AN IDEA OF THE CSS YOU WILL LIKELY BE USING, SEE THE LISTS BELOW. */
 
-        /* 
-        
-        Spacing 
+        /*
+
+        Spacing
 
             - padding (shorthand and/or specific properties like padding-bottom, etc.)
 
@@ -13,7 +13,7 @@
             - width, max-width, min-width
             - height, max-height, min-height
 
-        Typography 
+        Typography
 
             - font-family, font-size, font-style, font-weight
 
@@ -23,7 +23,7 @@
 
             - text-shadow, text-transform
 
-        Box, Layout and Border 
+        Box, Layout and Border
 
             - border (shorthand and/or specific properties like border-top, border-bottom-radius, border-width, etc.)
 
@@ -48,4 +48,229 @@
 
 /* ------ START WRITING YOUR CODE BELOW ------ */
 
+/* General setup */
 
+* {
+    box-sizing: border-box;
+}
+
+html {
+    font-size:16px;
+}
+
+body {
+    margin: 1.5rem auto;
+    width:90%;
+    min-width:56.25rem;
+}
+
+/* Layout */
+
+main {
+    overflow:auto;
+    min-width:45rem;
+
+}
+
+section {
+    float: left;
+    min-width: 22.5rem;
+    width:50%;
+}
+
+figure {
+    width:60%;
+    margin:0 10% 0 0;
+    float:left;
+}
+
+figure img {
+    width:100%;
+    max-width:25rem;
+}
+
+figcaption {
+    margin:.375rem 0;
+}
+
+.long-list {
+    margin-top:0;
+}
+
+nav {
+    float: left;
+    width:11.25rem;
+}
+
+footer {
+    clear: both;
+    margin-top:1.5rem;
+}
+
+section, aside, nav, footer {
+  padding: .5rem;
+}
+
+/* header and footer */
+
+header, footer {
+  border-top: .125rem solid #33658A;
+  border-bottom: .125rem solid #33658A;
+}
+
+/* ------ START WRITING YOUR CODE BELOW THIS LINE ------ */
+
+/* NO changes should be made to any of the code above. */
+
+/* NOTE: While you will be using some of the same CSS properties, the VALUES
+   may need to be different in order to style the page correctly. */
+
+
+
+/* Imported Typfaces */
+
+@@font-face {
+    font-family: Josefinslab;
+    src: url(.../fonts/josefinslab-regular.ttf); format('truetype');
+    font-weight:normal;
+    font-style:normal;
+}
+
+@@font-face {
+  font-family: Montserrat;
+  src: url(.../fonts/montserrat-regular.ttf); format('truetype');
+  font-weight:normal;
+  font-style:normal;
+}
+
+
+/* Typography Styles */
+html {
+  font-family: Montserrat, Arial, sans-serif;
+}
+
+h1 {
+  font-family: Josefinslab, Times, serif;
+  font-size: 3.75rem;
+  margin: 1.125rem;
+  align: center;
+}
+
+.highlight {
+  { color: firebrick; background-color: black;}
+}
+
+h2 {
+  font-family: Josefinslab, Times, serif;
+  font-size: 1.5rem;
+}
+
+h2 + p {
+  font-family: Josefinslab, Times, serif;
+  font-size: 0.75rem;
+  letter-spacing: 0.031rem;
+  word-spacing: 0.125rem;
+  text-indent: 1.5rem;
+}
+
+p {
+  font-family: Josefinslab, Times, serif;
+  font-size: 0.75rem;
+  letter-spacing: 0.031rem;
+  word-spacing: 0.125rem;
+}
+
+li {
+  font-family: Josefinslab, Times, serif;
+  font-size: 0.75rem;
+  letter-spacing: 0.031rem;
+  word-spacing: 0.125rem;
+}
+
+figcaption {
+  font-family: Josefinslab, Times, serif;
+  font-size: 0.75rem;
+  margin-bottom: 2rem;
+}
+
+
+/* Link Styling */
+
+
+a {
+  outline: none;
+}
+
+a:link,
+a:visited {
+  color: #33658A;
+}
+
+a:focus,
+a:hover {
+  text-decoration: none;
+}
+
+
+/* List Styling */
+
+ul class="long-list" {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  margin-right: 0rem;
+  margin-left: 0rem;
+  list-style-type: square;
+
+}
+
+ol {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  margin-right: 0rem;
+  margin-left: 0rem;
+  list-style-type: lower-latin;
+}
+
+.long-list a:hover {
+  text-transform: uppercase;
+}
+
+
+/* Navigation Menu */
+
+nav {
+  padding-left:0rem;
+  margin-top: 0.25rem;
+
+}
+
+nav a {
+  text-decoration: none;
+  display: inline-block;
+  width: 100%; line-height: 3;
+  text-align: center;
+  font-size: 1.125rem;
+  margin-bottom: 1.5rem;
+  border: solid;
+  border-width: 0.063rem;
+  border-color: #33658A;
+}
+
+nav a:focus,
+nav a:hover {
+  color: #FFF;
+  background-color: #33658A;
+
+}
+
+nav a:active {
+  color: #FFF;
+  background-color: #000;
+}
+
+
+/* Footer Styles */
+
+footer {
+  text-align: center;
+}
