--- a/school-site/css/style.css
+++ b/school-site/css/style.css
@@ -79,14 +79,14 @@ header, footer {
 
 /* Imported Typfaces */
 
-@@font-face {
+@font-face {
     font-family: Josefinslab;
     src: url(.../fonts/josefinslab-regular.ttf); format('truetype');
     font-weight:normal;
     font-style:normal;
 }
 
-@@font-face {
+@font-face {
   font-family: Montserrat;
   src: url(.../fonts/montserrat-regular.ttf); format('truetype');
   font-weight:normal;
